--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,13 +1,21 @@
 .navbar {
+    position: sticky;
     display: flex;
     align-items: center;
+    top: 0;
+    z-index: 1000;
     height: 100px;
     padding-left: 150px;
     border-bottom: 2px solid black;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    font-family: "Lexend", sans-serif;
 }
 
 .navbarUl {
     display: flex;
+    width: 50%;
 }
 
 .navbarItem {
@@ -17,10 +25,25 @@
 }
 
 .navbarTitle {
-    font-size: 23px;
+    font-size: 22px;
     font-weight: bold;
 }
 
 .navbarLink {
     text-decoration: none;
+    color: #000;
+}
+
+.navbarIcons {
+    display: flex;
+    justify-content: end;
+    width: 50%;
+}
+
+.logoIcon {
+    height: 1.5rem;
+    width: 1.5rem;
+    color: #000;
+    display: inline-block;
+    vertical-align: middle;
 }
