Added main and section components

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,7 +21,7 @@
 
 .marquee_container {
     width: 100%;
-    padding-bottom: 10px;
+    padding: 10px 0;
     border-bottom: 1px solid #000;
     overflow: hidden;
     white-space: nowrap;
@@ -57,4 +57,17 @@
 .title {
     padding-top: 5rem;
     font-size: 5lh;
+}
+
+.subtitle {
+    padding-top: 5rem;
+    font-size: 1.5lh;
+}
+
+.subtitle p {
+    padding-bottom: 1.8rem;
+}
+
+.subtitle b {
+    font-weight: bold;
 }
